Issue #26857: Workaround for missing symbol "gethostbyaddr_r" on Android.